# alenia-nerve

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.es.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.es.md  CONTRIBUTORS.md  LICENSE  README.es.md  README.md  SECURITY.md  generate_svgs.py  mkdocs.yml  nerve.config  pyproject.toml  screenshot.py  tareas.md  test_benchmark.py  test_hub.py  update_readmes.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/Archives/: CODE_OF_CONDUCT.es.md  CONTRIBUTING.es.md  CONTRIBUTORS.md  SECURITY.es.md  bug_report.es.md  bug_report.md  feature_request.es.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish-rust.yml  publish.yml
certs/: cert.pem  key.pem
clients/cpp/: CMakeLists.txt  README.md
clients/cpp/include/nerve/: nexus_client.hpp
clients/cpp/src/: nexus_client.cpp
clients/cpp/tests/: test_client.cpp
clients/csharp/: README.md
clients/csharp/NerveClient/: NerveClient.csproj  NexusClient.cs
clients/csharp/NerveClient.Tests/: NerveClient.Tests.csproj  Program.cs
clients/go/: CHANGELOG.es.md  CHANGELOG.md  README.es.md  README.md  client.go  client_test.go  go.mod
clients/javascript/: CHANGELOG.es.md  CHANGELOG.md  README.es.md  README.md  index.d.ts  index.js  package-lock.json  package.json  test.js
clients/python/: CHANGELOG.es.md  CHANGELOG.md  README.es.md  README.md  pyproject.toml
clients/python/src/nerve/: __init__.py  bridge.py  cli.py  cli_monitor.py  core.py
clients/python/src/nerve/dashboard/: index.html
clients/python/tests/: test_cli.py  test_core.py
clients/rust/: .gitignore  CHANGELOG.es.md  CHANGELOG.md  Cargo.toml  README.es.md  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: client_tests.rs
docs/: api.md  architecture.md  index.md  license.md  setup.md
examples/: basic_usage.py  studio_pipeline.py
go/: CHANGELOG.es.md  README.es.md  README.md
src/nerve/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
tests/integration/: test_cross_language.py
tests/integration/clients/: gateway.js  go.mod  ping_pong.go  ping_pong.js  ping_pong.py  worker.py
tests/integration/clients/rust_client/: Cargo.toml
tests/integration/clients/rust_client/src/: main.rs
