[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alenia-nerve"
version = "1.2.1"
description = "Official ultra-fast cross-platform local communication engine for Alenia Studios, designed for sovereign creators."
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Alenia Studios" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Intended Audience :: Developers",
]

[project.scripts]
nerve = "nerve.cli:main"

[project.urls]
Homepage = "https://github.com/Kaia-Alenia/alenia-nerve"
"Bug Tracker" = "https://github.com/Kaia-Alenia/alenia-nerve/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = []
