[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alenia-nerve"
version = "1.3.1"
description = "Official ultra-fast cross-platform local communication engine for Alenia Studios, designed for sovereign creators."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "ALENIA STUDIOS TOOL LICENSE Version 1.0" }
authors = [
    { name = "Alenia Studios" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = ["pytest"]
[project.scripts]
nerve = "nerve.cli:main"

[project.urls]
Homepage = "https://github.com/Kaia-Alenia/alenia-nerve"
"Bug Tracker" = "https://github.com/Kaia-Alenia/alenia-nerve/issues"


[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = []

[tool.setuptools.package-data]
"*" = ["py.typed"]
