[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alenia-nerve"
version = "1.3.2"
description = "Ultra-fast cross-platform local IPC engine for sovereign game developers."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "ALENIA STUDIOS TOOL LICENSE Version 1.0" }
authors = [
    { name = "Alenia Studios", email = "contact.aleniastudios@gmail.com" }
]
keywords = [
    "ipc", "inter-process communication", "sockets", "unix domain sockets",
    "game development", "local network", "alenia", "nerve", "hub", "client"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-timeout"]

[project.scripts]
nerve = "nerve.cli:main"

[project.urls]
Homepage = "https://github.com/Kaia-Alenia/alenia-nerve"
"Bug Tracker" = "https://github.com/Kaia-Alenia/alenia-nerve/issues"
"Source Code" = "https://github.com/Kaia-Alenia/alenia-nerve"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
license-files = []

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 30
