[package]
name = "alenia-nerve"
version = "1.4.7"
edition = "2021"
authors = ["Alenia Studios <contact.aleniastudios@gmail.com>"]
description = "Rust client library for the Alenia Nerve local IPC communication engine (UDS + TCP)"
license = "GPL-3.0-only"
repository = "https://github.com/Kaia-Alenia/alenia-nerve"
homepage = "https://github.com/Kaia-Alenia/alenia-nerve"
documentation = "https://docs.rs/alenia-nerve"
readme = "README.md"
keywords = ["ipc", "sockets", "uds", "tcp", "nerve"]
categories = ["network-programming", "asynchronous"]
exclude = ["target/", "tests/", ".gitkeep"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "sync", "time", "macros"] }
tokio-native-tls = "0.3"
native-tls = "0.2"
